default checklist for all
